--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,16 +1,18 @@
 {
-	"compilerOptions": {
-		"baseUrl": "./",
-		"module": "commonjs",
-		"jsx": "react",
-		"allowSyntheticDefaultImports": true,
-		"target": "ES2020",
-		"paths": {
-			"_components/*": ["./src/components/"],
-			"_pages": ["./src/pages/"],
-			"_presentation": ["./src/presentation/"],
-			"_assets": ["./src/assets"]
-		}
-	},
-	"exclude": ["node_modules/"]
+  "compilerOptions": {
+    "baseUrl": "./",
+    "module": "commonjs",
+    "jsx": "react",
+    "allowSyntheticDefaultImports": true,
+    "target": "ES2020",
+    "paths": {
+      "_components/*": ["./src/components/"],
+      "_pages": ["./src/pages/"],
+      "_presentation": ["./src/presentation/"],
+      "_assets": ["./src/assets/"],
+      "_utils": ["./src/utils/"],
+      "_redux": ["./src/redux/"]
+    }
+  },
+  "exclude": ["node_modules/"]
 }
