--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_DEV_API_URL=http://localhost:5050/api/v1/
-REACT_APP_PROD_API_URL=https://totickdo.herokuapp.com/
+REACT_APP_PROD_API_URL=https://totickdo.herokuapp.com/api/v1/
