--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "craco-alias": "^3.0.1",
+    "formik": "^2.2.9",
     "framer-motion": "^6.2.7",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
@@ -28,7 +29,8 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "craco start",
